--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             align-items: center;
             height: 100vh;
             font-family: 'Brush Script MT', cursive; /* Handwritten font */
+            overflow: hidden; /* Prevent scrolling when dragging */
         }
 
         .card-container {
@@ -39,6 +40,7 @@
             cursor: grab;
             z-index: 1; /* Default z-index */
             transition: opacity 0.3s ease, transform 0.2s ease; /* Smooth transitions */
+            touch-action: none; /* Prevent default touch behavior */
         }
 
         .card:last-of-type {
@@ -68,6 +70,7 @@
                 offsetY = clientY - card.getBoundingClientRect().top;
                 card.style.zIndex = 1000; // Bring the card to the front
                 card.style.cursor = 'grabbing';
+                card.classList.add('dragging');
             };
 
             const onDrag = (clientX, clientY) => {
@@ -80,6 +83,8 @@
                 if (draggingCard) {
                     draggingCard.style.zIndex = ''; // Reset z-index after drag
                     draggingCard.style.cursor = 'grab';
+                    draggingCard.classList.remove('dragging');
+                    draggingCard.style.transform = ''; // Reset transform
                     draggingCard = null;
                 }
             };
@@ -99,16 +104,18 @@
                 // Touch events
                 card.addEventListener('touchstart', (e) => {
                     if (index === currentIndex) { // Only allow dragging of the current card
+                        e.preventDefault(); // Prevent default touch behavior
                         const touch = e.touches[0];
                         startDrag(card, touch.clientX, touch.clientY);
                     }
-                });
+                }, { passive: false });
                 document.addEventListener('touchmove', (e) => {
                     if (index === currentIndex) { // Only drag if this is the current card
+                        e.preventDefault(); // Prevent default touch behavior
                         const touch = e.touches[0];
                         onDrag(touch.clientX, touch.clientY);
                     }
-                });
+                }, { passive: false });
                 document.addEventListener('touchend', endDrag);
 
                 // Click event to remove card
